--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,40 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.container{
+  width: 80%;
+  height: 1000px;
+  margin: 20px auto;
+}
+
+.card{
+  display: inline-block;
+  width: 31%;
+  margin-right: 15px;
+}
+
+h3{
+  text-transform: uppercase;
+  font-size: 15px;
+}
+
+.card img{
+  width: 100%;
+}
+
+.card span{
+  font-size: 12px;
+}
+
+.brand, .sales{
+  color: grey;
+}
+
+.prices{
+  color: red;
+}
+
+.sales{
+  text-decoration: line-through;
+}
